k8s/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
      - name: server
        image: thetalorian/md-server
        #resources:
        #  limits:
        #    memory: "128Mi"
        #    cpu: "500m"
        ports:
        - containerPort: 5000
